feat: Fix banner API routes and improve column mapping
- Fix banner routes ordering to prevent route conflicts
- Map column names correctly (link_url -> link, position -> order)
- Add fallback handling for missing database columns
- Improve banner creation/update with proper field mapping
- Add kill-port script for Windows to handle port conflicts
- Improve error handling and response messages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "VENTECH E-Commerce Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "kill-port.bat && nodemon",
+    "dev:clean": "kill-port.bat && nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
