--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.21.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
-    "pdfkit": "^0.15.2"
+    "pdfkit": "^0.15.2",
+    "resend": "^6.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
