--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.15.2",
-    "resend": "^6.4.0"
+    "resend": "^6.4.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
