--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: PORT
         value: 5000
       - key: FRONTEND_URL
-        value: https://hogtechgh.com
+        value: https://hogtechgh.com,http://localhost:3000
       # Supabase Configuration
       - key: SUPABASE_URL
         sync: false
