--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.918.0",
     "@aws-sdk/s3-request-presigner": "^3.918.0",
+    "@sentry/node": "^10.26.0",
+    "@sentry/profiling-node": "^10.26.0",
     "@supabase/supabase-js": "^2.47.13",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
@@ -35,6 +37,8 @@
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.15.2",
     "resend": "^6.4.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.23",
     "zod": "^4.1.12"
   },
@@ -43,6 +47,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "@types/pdfkit": "^0.13.9",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.9",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
